calculo simulador site institucional

--- a/Sprint 2/Site Institucional/Site Institucional/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional/index.html
@@ -259,7 +259,8 @@
                     </form>
                     <div id="div_javascript" class="div_visualizar">
                         Sem a RelaxMachine a sua empresa <span id="result_name"></span> tem uma média <span
-                            id="result_absent"></span>% e com ela a sua empresa irá economizar uma média de R$<span
+                            id="result_absent"></span>% de absentismo
+                             e com ela a sua empresa irá economizar uma média de R$<span
                             id="result_eco"></span>, aumentando a produtividade da
                         sua empresa em <span id="result_porcent"></span>% por um preço de R$<span id="result_price">
 
@@ -278,7 +279,7 @@
                     <form class="Contato">
                         <label>Nome</label>
                         <br>
-                        <input class="input-form" placeholder="Nome" type="text" id="in_name">
+                        <input class="input-form" placeholder="Nome" type="text" id="in_name_contato">
                         <br>
                         <label>Email</label>
                         <br>
