--- a/Sprint 2/Site Institucional/Site Institucional/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional/index.html
@@ -103,8 +103,7 @@
                                             <h3>Abner Lucas</h3>
                                             <p>Analista Desenvolvedor Back-end</p>
                                         </div>
-                                        <img
-                                            src="https://cutewallpaper.org/21/chris-hemsworth-wallpapers/Chris-Hemsworth-Wallpapers-HD-for-Android-APK-Download.jpg">
+                                        <img src="src/img/abner.jpg">
                                     </div>
                                 </div>
                             </div>
@@ -260,8 +259,8 @@
                     <div id="div_javascript" class="div_visualizar">
                         Sem a RelaxMachine a sua empresa <span id="result_name"></span> tem uma média <span
                             id="result_absent"></span>% de absentismo
-                             e com ela a sua empresa irá economizar uma média de R$<span
-                            id="result_eco"></span>, aumentando a produtividade da
+                        e com ela a sua empresa irá economizar uma média de R$<span id="result_eco"></span>, aumentando
+                        a produtividade da
                         sua empresa em <span id="result_porcent"></span>% por um preço de R$<span id="result_price">
 
                         </span>
