Alteração do caminho do icone

--- a/Sprint 2/Site Institucional/Site Institucional/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional/index.html
@@ -304,7 +304,7 @@
                     <h4>Desenvolvido por FERBGAM </h4>
                 </div>
                 <div class="icones">
-                    <a href="https://github.com/BandTec/Ferbgam"><img src="img/github.png" alt="icone github"></a>
+                    <a href="https://github.com/BandTec/Ferbgam"><img src="./src/img/github.png" alt="icone github"></a>
                     <a href=""><img src="./src/img/logotipo-do-linkedin.png" alt="icone linkedin"></a>
                 </div>
             </div>
