--- a/Sprint 2/Site Institucional/Site Institucional/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ferbgam</title>
-    <link rel="icon" href="./src/img/fer1branco.png">
+    <link rel="icon" href="./src/img/Logotipos/fer1branco.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/css/style.css">
@@ -64,19 +64,19 @@
                         <div class="container">
 
                             <div class="box-item">
-                                <img src="./src/img/goal.png">
+                                <img src="./src/img/Icones/goal.png">
                                 <h3>Missão</h3>
                                 <p>Atender às necessidades de nossos clientes e superar as expectativas, oferecendo
                                     muito mais que produtos e serviços.</p>
                             </div>
                             <div class="box-item">
-                                <img src="./src/img/goal (1).png">
+                                <img src="./src/img/Icones/goal (1).png">
                                 <h3>Visão</h3>
                                 <p> Ser referência em inovação e qualidade, agregando bem-estar e conforto aos ambientes
                                     empresariais. </p>
                             </div>
                             <div class="box-item">
-                                <img src="./src/img/learning.png">
+                                <img src="./src/img/Icones/learning.png">
                                 <h3>Valores</h3>
                                 <p>Inovação, liderança, responsabilidade, integridade, qualidade e execelência</p>
                             </div>
@@ -103,7 +103,7 @@
                                             <h3>Abner Lucas</h3>
                                             <p>Analista Desenvolvedor Back-end</p>
                                         </div>
-                                        <img src="src/img/abner.jpg">
+                                        <img src="src/img/Equipe/abner.jpg">
                                     </div>
                                 </div>
                             </div>
@@ -115,7 +115,7 @@
                                             <h3>Fernando Marques</h3>
                                             <p>Desenvolvedor Back-end</p>
                                         </div>
-                                        <img src="./src/img/Fernando.jpg">
+                                        <img src="./src/img/Equipe/Fernando.jpg">
                                     </div>
                                 </div>
                             </div>
@@ -126,7 +126,7 @@
                                             <h3>Giovanna Melo</h3>
                                             <p>Desenvolvedora Front-end</p>
                                         </div>
-                                        <img src="./src/img/giovanna.jpeg">
+                                        <img src="./src/img/Equipe/giovanna.jpeg">
                                     </div>
                                 </div>
                             </div>
@@ -141,7 +141,7 @@
                                             <h3>Gustavo Manocchio</h3>
                                             <p>Desenvolvedor Full Stack</p>
                                         </div>
-                                        <img src="./src/img/manocchio.jpeg">
+                                        <img src="./src/img/Equipe/manocchio.jpeg">
                                     </div>
                                 </div>
                             </div>
@@ -163,7 +163,7 @@
                                     <div class="holder">
                                         <div class="pink-overlay">
                                             <h3>Leonardo Ianotta</h3>
-                                            <p>Estagiário</p>
+                                            <p>Analista</p>
                                         </div>
                                         <img
                                             src="https://cutewallpaper.org/21/chris-hemsworth-wallpapers/Chris-Hemsworth-Wallpapers-HD-for-Android-APK-Download.jpg">
@@ -183,7 +183,7 @@
             <section class="section-simulador">
                 <div class="container-section-simulador">
                     <div class="div-logo-section-simulador">
-                        <img class="logo-section-simulador" src="./src/img/logo-relax.png" alt="">
+                        <img class="logo-section-simulador" src="./src/img/Logotipos/logo-relax.png" alt="">
                         <br>
                         <h3 class="subtitulo-simulador">Simule seu investimento com a <b>FERBGAM</b></h3>
                     </div>
@@ -226,7 +226,7 @@
                             <div class="boxes">
                                 <div class="boxes-item">
                                     <div class="box-icon">
-                                        <img src="./src/img/Basic.png">
+                                        <img src="./src/img/Icones/Basic.png">
                                     </div>
                                     <h3>Basic</h3>
                                     <div class="box-text">
@@ -235,7 +235,7 @@
                                 </div>
                                 <div class="boxes-item">
                                     <div class="box-icon">
-                                        <img src="./src/img/Medium.png">
+                                        <img src="./src/img/Icones/Medium.png">
                                     </div>
                                     <h3>Medium</h3>
                                     <div class="box-text">
@@ -244,7 +244,7 @@
                                 </div>
                                 <div class="boxes-item">
                                     <div class="box-icon">
-                                        <img src="./src/img/Premium.png">
+                                        <img src="./src/img/Icones/Premium.png">
                                     </div>
                                     <h3>Premium</h3>
                                     <div class="box-text">
@@ -304,8 +304,8 @@
                     <h4>Desenvolvido por FERBGAM </h4>
                 </div>
                 <div class="icones">
-                    <a href="https://github.com/BandTec/Ferbgam"><img src="./src/img/github.png" alt="icone github"></a>
-                    <a href=""><img src="./src/img/logotipo-do-linkedin.png" alt="icone linkedin"></a>
+                    <a href="https://github.com/BandTec/Ferbgam"><img src="./src/img/Icones/github.png" alt="icone github"></a>
+                    <a href=""><img src="./src/img/Icones/logotipo-do-linkedin.png" alt="icone linkedin"></a>
                 </div>
             </div>
     </main>
