Formulário de Cadastro

--- a/Sprint 2/Site Institucional/Site Institucional/pages/login.html
+++ b/Sprint 2/Site Institucional/Site Institucional/pages/login.html
@@ -14,8 +14,9 @@
     <div class="container">
         <div class="forms-container">
             <div class="signin-signup">
+                <!--Formulário de Login-->
                 <form class="sign-in-form" action="">
-                    <h2 class="title">Sign in</h2>
+                    <h2 class="title">Bem-vindo</h2>
                     <div class="input-field">
                         <i class="fas fa-user"></i>
                         <input type="text" placeholder="Usuário">
@@ -26,7 +27,45 @@
                     </div>
                     <input type="submit" value="Login" class="btn solid">
 
-                    <p class="social-text">Or Sign in with social platforms</p>
+                    <p class="social-text">Ou logue-se com as redes sociais</p>
+
+                    <div class="social-media">
+                        <a href="#" class="social-icon">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a href="#" class="social-icon">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a href="#" class="social-icon">
+                            <i class="fab fa-google"></i>
+                        </a>
+                        <a href="#" class="social-icon">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                    </div>
+                </form>
+
+                <!--Formulário de Cadastro-->
+                <form class="sign-up-form" action="">
+                    <h2 class="title">Cadastre-se</h2>
+                    <div class="input-field">
+                        <i class="fas fa-user"></i>
+                        <input type="text" placeholder="Usuário">
+                    </div>
+
+                    <div class="input-field">
+                        <i class="fas fa-envelope"></i>
+                        <input type="text" placeholder="E-mail">
+                    </div>
+
+                    <div class="input-field">
+                        <i class="fas fa-lock"></i>
+                        <input type="password" placeholder="Senha">
+                    </div>
+
+                    <input type="submit" value="Cadastrar" class="btn solid">
+
+                    <p class="social-text">Ou Cadastre-se com as redes sociais</p>
 
                     <div class="social-media">
                         <a href="#" class="social-icon">
