--- a/Sprint 2/Site Institucional/Site Institucional/pages/login.html
+++ b/Sprint 2/Site Institucional/Site Institucional/pages/login.html
@@ -82,7 +82,33 @@
                         </a>
                     </div>
                 </form>
+            </div>
+        </div>
 
+        <div class="panels-container">
+            <div class="panel left-panel">
+                <div class="content">
+                    <h3>Novo aqui?</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore qui ipsam sunt excepturi maiores
+                        ad cupiditate delectus itaque vitae enim.</p>
+                    <button class="btn transparent" id="sign-up-btn">
+                        Cadastre-se
+                    </button>
+                </div>
+                <img src="../src/img/svg/signin.svg" class="img">
+            </div>
+
+
+            <div class="panel right-panel">
+                <div class="content">
+                    <h3>Já tem uma conta?</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore qui ipsam sunt excepturi maiores
+                        ad cupiditate delectus itaque vitae enim.</p>
+                    <button class="btn transparent" id="sign-in-btn">
+                        Login
+                    </button>
+                </div>
+                <img src="../src/img/svg/signup.svg" class="img">
             </div>
         </div>
     </div>
