mudando para arrow function para function normal

--- a/Sprint 2/Site Institucional/Site Institucional/pages/login.html
+++ b/Sprint 2/Site Institucional/Site Institucional/pages/login.html
@@ -19,11 +19,11 @@
                     <h2 class="title">Bem-vindo</h2>
                     <div class="input-field">
                         <i class="fas fa-user"></i>
-                        <input type="text" placeholder="Usuário">
+                        <input type="text" placeholder="Usuário" required>
                     </div>
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
-                        <input type="password" placeholder="Senha">
+                        <input type="password" placeholder="Senha" required>
                     </div>
                     <input type="submit" value="Login" class="btn solid">
 
@@ -46,7 +46,7 @@
                 </form>
 
                 <!--Formulário de Cadastro-->
-                <form class="sign-up-form" action="">
+                <form class="sign-up-form" action="javascript:void(0)">
                     <h2 class="title">Cadastre-se</h2>
                     <div class="input-field">
                         <i class="fas fa-user"></i>
