--- a/Sprint 2/Site Institucional/Site Institucional/pages/login.html
+++ b/Sprint 2/Site Institucional/Site Institucional/pages/login.html
@@ -46,27 +46,34 @@
                 </form>
 
                 <!--Formulário de Cadastro-->
-                <form class="sign-up-form" action="javascript:void(0)">
+                <form class="sign-up-form" onsubmit="cadastrar()" action="javascript:void(0)">
                     <h2 class="title">Cadastre-se</h2>
                     <div class="input-field">
                         <i class="fas fa-user"></i>
-                        <input type="text" placeholder="Usuário" required>
+                        <input type="text" placeholder="Usuário" required
+                            oninvalid="this.setCustomValidity('Insira um nome de usuário')">
                     </div>
 
                     <div class="input-field">
                         <i class="fas fa-envelope"></i>
-                        <input type="text" placeholder="E-mail" required>
+                        <input id="emailCadastro" type="text" placeholder="E-mail" required
+                            oninvalid="this.setCustomValidity('Insira um e-mail')">
                     </div>
+                    <div class="error-message">
 
+                        <i class="fas fa-times-circle"></i>
+                        <p>E-mail inválido</p>
+                    </div>
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
                         <input id="cadastroPassword" onkeyup="checkPassword()" type="password" placeholder="Senha"
-                            required>
+                            required oninvalid="this.setCustomValidity('Insira uma senha')">
                     </div>
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
                         <input id="confirmacaoPassword" onkeyup="checkPassword()" type="password"
-                            placeholder="Confirme sua senha" required>
+                            placeholder="Confirme sua senha" required
+                            oninvalid="this.setCustomValidity('Insira uma senha')">
                     </div>
                     <div class="check-container">
                         <div class="check-option">
