--- a/Sprint 2/Site Institucional/Site Institucional/pages/login.html
+++ b/Sprint 2/Site Institucional/Site Institucional/pages/login.html
@@ -19,11 +19,11 @@
                     <h2 class="title">Bem-vindo</h2>
                     <div class="input-field">
                         <i class="fas fa-user"></i>
-                        <input type="text" placeholder="Usuário" required>
+                        <input type="text" placeholder="Usuário">
                     </div>
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
-                        <input type="password" placeholder="Senha" required>
+                        <input type="password" placeholder="Senha">
                     </div>
                     <input type="submit" value="Login" class="btn solid">
 
@@ -50,30 +50,31 @@
                     <h2 class="title">Cadastre-se</h2>
                     <div class="input-field">
                         <i class="fas fa-user"></i>
-                        <input type="text" placeholder="Usuário" required
+                        <input type="text" placeholder="Usuário"
                             oninvalid="this.setCustomValidity('Insira um nome de usuário')">
                     </div>
-
+                    <div id="error-message-user" class="error-message">
+                        <i class="fas fa-times-circle"></i>
+                        <p>Insira um nome de usuário</p>
+                    </div>
                     <div class="input-field">
                         <i class="fas fa-envelope"></i>
-                        <input id="emailCadastro" type="text" placeholder="E-mail" required
+                        <input id="emailCadastro" type="text" placeholder="E-mail"
                             oninvalid="this.setCustomValidity('Insira um e-mail')">
                     </div>
-                    <div class="error-message">
-
+                    <div id="error-message-email" class="error-message">
                         <i class="fas fa-times-circle"></i>
                         <p>E-mail inválido</p>
                     </div>
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
                         <input id="cadastroPassword" onkeyup="checkPassword()" type="password" placeholder="Senha"
-                            required oninvalid="this.setCustomValidity('Insira uma senha')">
+                            oninvalid="this.setCustomValidity('Insira uma senha')">
                     </div>
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
                         <input id="confirmacaoPassword" onkeyup="checkPassword()" type="password"
-                            placeholder="Confirme sua senha" required
-                            oninvalid="this.setCustomValidity('Insira uma senha')">
+                            placeholder="Confirme sua senha" oninvalid="this.setCustomValidity('Insira uma senha')">
                     </div>
                     <div class="check-container">
                         <div class="check-option">
