--- a/Sprint 2/Site Institucional/Site Institucional/pages/login.html
+++ b/Sprint 2/Site Institucional/Site Institucional/pages/login.html
@@ -50,17 +50,11 @@
                     <h2 class="title">Cadastre-se</h2>
                     <div class="input-field">
                         <i class="fas fa-user"></i>
-                        <input type="text" placeholder="Usuário"
-                            oninvalid="this.setCustomValidity('Insira um nome de usuário')">
-                    </div>
-                    <div id="error-message-user" class="error-message">
-                        <i class="fas fa-times-circle"></i>
-                        <p>Insira um nome de usuário</p>
+                        <input id="userCadastro" type="text" placeholder="Usuário" required>
                     </div>
                     <div class="input-field">
                         <i class="fas fa-envelope"></i>
-                        <input id="emailCadastro" type="text" placeholder="E-mail"
-                            oninvalid="this.setCustomValidity('Insira um e-mail')">
+                        <input id="emailCadastro" type="text" placeholder="E-mail" required>
                     </div>
                     <div id="error-message-email" class="error-message">
                         <i class="fas fa-times-circle"></i>
@@ -69,12 +63,12 @@
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
                         <input id="cadastroPassword" onkeyup="checkPassword()" type="password" placeholder="Senha"
-                            oninvalid="this.setCustomValidity('Insira uma senha')">
+                            required>
                     </div>
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
                         <input id="confirmacaoPassword" onkeyup="checkPassword()" type="password"
-                            placeholder="Confirme sua senha" oninvalid="this.setCustomValidity('Insira uma senha')">
+                            placeholder="Confirme sua senha" required>
                     </div>
                     <div class="check-container">
                         <div class="check-option">
