alert personalizado de cadastro

--- a/Sprint 2/Site Institucional/Site Institucional/pages/login.html
+++ b/Sprint 2/Site Institucional/Site Institucional/pages/login.html
@@ -12,6 +12,16 @@
 
 <body>
     <div class="container">
+
+        <div id="cadastroAlert" class="alert">
+            <span></span>
+            <i class="far fa-check-circle"></i>
+            <p>Cadastro realizado com sucesso</p>
+            <div onclick="closeAlert()" class="close-btn">
+                <i class="fas fa-times"></i>
+            </div>
+        </div>
+
         <div class="forms-container">
             <div class="signin-signup">
                 <!--Formulário de Login-->
