--- a/Sprint 2/Site Institucional/Site Institucional/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional/index.html
@@ -190,11 +190,11 @@
                     </div>
                     <form action="javascript:void(0)" onsubmit="calculate()" class="form-section-simulador">
                         <div class="container-simulator">
-                            
+
                             <div class="colum-simulator">
                                 <label> Qual o nome da sua empresa?</label>
                                 <br>
-                                <input id="in_name" placeholder="Nome da empresa" class="input-form" autofocus>
+                                <input id="in_name" placeholder="Nome da empresa" class="input-form">
                                 <br>
                                 <label>Quantos funcionarios tem sua empresa?</label>
                                 <br>
@@ -306,7 +306,8 @@
                     <h4>Desenvolvido por FERBGAM </h4>
                 </div>
                 <div class="icones">
-                    <a href="https://github.com/BandTec/Ferbgam"><img src="./src/img/Icones/github.png" alt="icone github"></a>
+                    <a href="https://github.com/BandTec/Ferbgam"><img src="./src/img/Icones/github.png"
+                            alt="icone github"></a>
                     <a href=""><img src="./src/img/Icones/logotipo-do-linkedin.png" alt="icone linkedin"></a>
                 </div>
             </div>
