Mudando scroll do site institucional

--- a/Sprint 2/Site Institucional/Site Institucional/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional/index.html
@@ -217,7 +217,7 @@
                                 <label>Selecione qual pacote deseja simular </label>
                                 <br>
                                 <select name="Selecione um pack" id="se_pack" class="input-form">
-                                    <option class="input-form" value="">Selecione uma opção</option>
+                                    <option class="input-form" value="" selected disabled>Selecione uma opção</option>
                                     <option class="input-form" value="11">Basic</option>
                                     <option class="input-form" value="22">Medium</option>
                                     <option class="input-form" value="33">Premium</option>
