--- a/Sprint 2/Site Institucional/Site Institucional/pages/login.html
+++ b/Sprint 2/Site Institucional/Site Institucional/pages/login.html
@@ -46,7 +46,7 @@
                     </div>
                     <input type="submit" value="Login" class="btn solid">
 
-                    <p class="social-text">Ou logue-se com as redes sociais</p>
+                    <!-- <p class="social-text">Ou logue-se com as redes sociais</p>
 
                     <div class="social-media">
                         <a href="#" class="social-icon">
@@ -61,7 +61,7 @@
                         <a href="#" class="social-icon">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
-                    </div>
+                    </div> -->
                 </form>
 
                 <!--Formulário de Cadastro-->
@@ -109,7 +109,7 @@
                         </div>
                     </div>
 
-                    <input type="submit" value="Cadastrar" class="btn solid">
+                    <input type="submit" value="Cadastrar" class="btn solid pink">
 
 
                     <!-- <p class="social-text">Ou Cadastre-se com as redes sociais</p>
@@ -135,9 +135,7 @@
         <div class="panels-container">
             <div class="panel left-panel">
                 <div class="content">
-                    <h3>Novo aqui?</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore qui ipsam sunt excepturi maiores
-                        ad cupiditate delectus itaque vitae enim.</p>
+                    <h3>Ainda não tem uma conta?</h3>
                     <button class="btn transparent" id="sign-up-btn">
                         Cadastre-se
                     </button>
@@ -149,8 +147,6 @@
             <div class="panel right-panel">
                 <div class="content">
                     <h3>Já tem uma conta?</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore qui ipsam sunt excepturi maiores
-                        ad cupiditate delectus itaque vitae enim.</p>
                     <button class="btn transparent" id="sign-in-btn">
                         Login
                     </button>
