--- a/Sprint 2/Site Institucional/Site Institucional/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional/index.html
@@ -153,7 +153,7 @@
                                             <p>Desenvolvedor Back-end</p>
                                         </div>
                                         <img
-                                            src="https://cutewallpaper.org/21/chris-hemsworth-wallpapers/Chris-Hemsworth-Wallpapers-HD-for-Android-APK-Download.jpg">
+                                            src="src/img/Equipe/Jhonatan.jpg">
                                     </div>
                                 </div>
                             </div>
