Ajustes no Site Institucional

--- a/Sprint 2/Site Institucional/Site Institucional/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/css/style.css">
     <script src="./src/js/script.js"></script>
+    <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -43,6 +44,7 @@
                     <li><a href="#Equipe">Equipe</a></li>
                     <li><a href="#Servicos">Nossos serviços</a></li>
                     <li><a href="#Contato">Entre em contato</a></li>
+                    <button class="btn-login"><a href="./pages/login.html">Login</a></button>
                 </ul>
             </div>
         </div>
@@ -296,7 +298,7 @@
                         </select>
                         <textarea placeholder="Sua mensagem" class="input-form mensagem"></textarea>
                         <br>
-                        <button>Enviar</button>
+                        <button class="btn-contato">Enviar</button>
                         <br>
                     </form>
                 </div>
@@ -306,9 +308,7 @@
                     <h4>Desenvolvido por FERBGAM </h4>
                 </div>
                 <div class="icones">
-                    <a href="https://github.com/BandTec/Ferbgam"><img src="./src/img/Icones/github.png"
-                            alt="icone github"></a>
-                    <a href=""><img src="./src/img/Icones/logotipo-do-linkedin.png" alt="icone linkedin"></a>
+                    <a href="https://github.com/BandTec/Ferbgam"><i class="fab fa-github"></i></a>
                 </div>
             </div>
     </main>
