Página nova da dashboard

--- a/Sprint 2/Site Institucional/Site Institucional/pages/dashboard.html
+++ b/Sprint 2/Site Institucional/Site Institucional/pages/dashboard.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -11,6 +12,7 @@
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
 </head>
+
 <body id="body-pg">
     <div class="l-navbar" id="navbar">
         <nav class="nav">
@@ -24,7 +26,7 @@
                         <span class="nav_name">Users</span>
                     </a>
 
-                    <a href="#" class="nav_link">
+                    <a href="#" class="nav_link selected">
                         <i class='bx bx-grid-alt nav_icon'></i>
                         <span class="nav_name">Dashboard</span>
                     </a>
@@ -59,22 +61,26 @@
             </div>
             <section class="box-container">
                 <div class="boxes">
-                    <div class="boxes-item">
-                        <h3>Sala 2C</h3>
-                        <div class="box-text">
-                            <p>Sala localizada no 2° andar do prédio</p>
-                            <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
-                                <i class='far fa-lightbulb luminosidade'></i></h4>
-                            <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
+                    <a href="./sala.html">
+                        <div class="boxes-item">
+                            <h3>Sala 2C</h3>
+                            <div class="box-text">
+                                <p>Sala localizada no 2° andar do prédio</p>
+                                <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
+                                    <i class='far fa-lightbulb luminosidade'></i>
+                                </h4>
+                                <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                     <div class="boxes-item">
                         <h3>Sala 3A</h3>
                         <div class="box-text">
                             <p>Sala localizada no 3° andar do prédio</p>
                             <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
                                 <i class='fas fa-tint umidade'></i>
-                                <i class='far fa-lightbulb luminosidade'></i></h4>
+                                <i class='far fa-lightbulb luminosidade'></i>
+                            </h4>
                             <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
                         </div>
                     </div>
@@ -84,7 +90,7 @@
                             <p>Sala localizada no 8° andar do prédio</p>
                             <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
                                 <i class='fas fa-tint umidade'></i>
-                            <h4>Status: <i class='fas fa-circle critico'></i> </h4>
+                                <h4>Status: <i class='fas fa-circle critico'></i> </h4>
                         </div>
                     </div>
                 </div>
@@ -96,7 +102,8 @@
                         <div class="box-text">
                             <p>Sala localizada no 1° andar do prédio</p>
                             <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
-                                <i class='far fa-lightbulb luminosidade'></i></h4>
+                                <i class='far fa-lightbulb luminosidade'></i>
+                            </h4>
                             <h4>Status: <i class='fas fa-circle critico'></i> </h4>
                         </div>
                     </div>
@@ -106,7 +113,8 @@
                             <p>Sala localizada no 6° andar do prédio</p>
                             <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
                                 <i class='fas fa-tint umidade'></i>
-                                <i class='far fa-lightbulb luminosidade'></i></h4>
+                                <i class='far fa-lightbulb luminosidade'></i>
+                            </h4>
                             <h4>Status: <i class='fas fa-circle alerta'></i> </h4>
                         </div>
                     </div>
@@ -116,7 +124,7 @@
                             <p>Sala localizada no 4° andar do prédio</p>
                             <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
                                 <i class='fas fa-tint umidade'></i>
-                            <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
+                                <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
                         </div>
                     </div>
                 </div>
@@ -125,4 +133,5 @@
     </div>
     <script src='js/main.js'></script>
 </body>
+
 </html>
