Subindo o primeiro gráfico

--- a/Sprint 2/Site Institucional/Site Institucional/pages/sala.html
+++ b/Sprint 2/Site Institucional/Site Institucional/pages/sala.html
@@ -62,9 +62,49 @@
 
     <div class="graphics-orientation">
         <div class="graphics-container">
+            <div class="panel">
+                <div class="general-title">
+                    <h1>Informações</h1>
+                    <hr class="pink-stroke" />
+                </div>
+                <div>
+                    BLABLABLABLA
+                </div>
+            </div>
 
+            <div class="panel">
+                <div class="general-title">
+                    <h1>Luminosidade</h1>
+                    <hr class="pink-stroke" />
+                </div>
+                <div>
+                    <canvas width="500px" class=" chart" id="chartLuminosity"></canvas>
+                </div>
+            </div>
+
+            <div class="panel">
+                <div class="general-title">
+                    <h1>Umidade</h1>
+                    <hr class="pink-stroke" />
+                </div>
+                <div>
+                    <canvas id="chartHumidity"></canvas>
+                </div>
+            </div>
+
+            <div class="panel">
+                <div class="general-title">
+                    <h1>Temperatura</h1>
+                    <hr class="pink-stroke" />
+                </div>
+                <div>
+                    <canvas id="chartTemperature"></canvas>
+                </div>
+            </div>
         </div>
     </div>
+    <script src="http://www.chartjs.org/dist/2.7.1/Chart.js"></script>
+    <script src="../src/js/static.js"></script>
 </body>
 
 </html>
