Mudando display de grid para flex

--- a/Sprint 2/Site Institucional/Site Institucional/pages/sala.html
+++ b/Sprint 2/Site Institucional/Site Institucional/pages/sala.html
@@ -68,37 +68,34 @@
                     <hr class="pink-stroke" />
                 </div>
                 <div>
-                    BLABLABLABLA
+                    <!-- BLABLABLABLA -->
                 </div>
             </div>
-
             <div class="panel">
                 <div class="general-title">
                     <h1>Luminosidade</h1>
                     <hr class="pink-stroke" />
                 </div>
                 <div>
-                    <canvas width="500px" class=" chart" id="chartLuminosity"></canvas>
+                    <!-- <canvas class=" chart" id="chartLuminosity"></canvas> -->
                 </div>
             </div>
-
             <div class="panel">
                 <div class="general-title">
                     <h1>Umidade</h1>
                     <hr class="pink-stroke" />
                 </div>
                 <div>
-                    <canvas id="chartHumidity"></canvas>
+                    BLABLABLABLA
                 </div>
             </div>
-
             <div class="panel">
                 <div class="general-title">
                     <h1>Temperatura</h1>
                     <hr class="pink-stroke" />
                 </div>
                 <div>
-                    <canvas id="chartTemperature"></canvas>
+                    <!-- <canvas class=" chart" id="chartLuminosity"></canvas> -->
                 </div>
             </div>
         </div>
