Subindo charts (Responsividade barrada pelo chartjs)

--- a/Sprint 2/Site Institucional/Site Institucional/pages/sala.html
+++ b/Sprint 2/Site Institucional/Site Institucional/pages/sala.html
@@ -68,7 +68,7 @@
                     <hr class="pink-stroke" />
                 </div>
                 <div>
-                    <!-- BLABLABLABLA -->
+                    BLABLABLABLA
                 </div>
             </div>
             <div class="panel">
@@ -77,7 +77,7 @@
                     <hr class="pink-stroke" />
                 </div>
                 <div>
-                    <!-- <canvas class=" chart" id="chartLuminosity"></canvas> -->
+                    <canvas width="400px" class=" chart" id="chartLuminosity"></canvas>
                 </div>
             </div>
             <div class="panel">
@@ -86,7 +86,7 @@
                     <hr class="pink-stroke" />
                 </div>
                 <div>
-                    BLABLABLABLA
+                    <canvas width="400px" class=" chart" id="chartHumidity"></canvas>
                 </div>
             </div>
             <div class="panel">
@@ -95,7 +95,7 @@
                     <hr class="pink-stroke" />
                 </div>
                 <div>
-                    <!-- <canvas class=" chart" id="chartLuminosity"></canvas> -->
+                    <canvas width="400px" class=" chart" id="chartTemperature"></canvas>
                 </div>
             </div>
         </div>
