Att do index site

--- a/Sprint 2/Site Institucional/Site Institucional/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional/index.html
@@ -165,10 +165,10 @@
                                     <div class="holder">
                                         <div class="pink-overlay">
                                             <h3>Leonardo Ianotta</h3>
-                                            <p>Analista</p>
+                                            <p>Desenvolvedor Back-end</p>
                                         </div>
                                         <img
-                                            src="https://cutewallpaper.org/21/chris-hemsworth-wallpapers/Chris-Hemsworth-Wallpapers-HD-for-Android-APK-Download.jpg">
+                                            src="../Site Institucional/src/img/Equipe/Leonardo test.jpeg">
                                     </div>
                                 </div>
                             </div>
